# cubes

./: CMakeLists.txt  main.cpp
cubes-classes/: cameraCLASS.h  shaderCLASS.h
cubes-libs/: SOIL.lib
cubes-shaders/: lamp.fs  lamp.vs  object-with-lights.fs  object.vs
